# SimpleVectorGraphicsHacking

./: .gitignore  README.md  configure.ac
src/: Makefile.am  main.c  xcb_hello.c  xcb_output_info_modes.c  xcb_screen_settings.c
