bin_PROGRAMS = xcb_hello xcb_screen_settings xcb_output_info_modes
xcb_hello_SOURCES = xcb_hello.c
xcb_hello_LDADD = $(XCB_LIBS)
xcb_screen_settings_SOURCES = xcb_screen_settings.c
xcb_screen_settings_LDADD = $(XCB_LIBS)
xcb_output_info_modes_SOURCES = xcb_output_info_modes.c
xcb_output_info_modes_LDADD = $(XCB_LIBS) $(XCB_RANDR_LIBS)